# grad-math

./: .gitignore  general-preamble.tex  pyproject.toml
.auto-anki/src/auto_anki/: __init__.py  tsv_generator.py
.auto-anki/tests/: __init__.py  test_parser.py
.claude/commands/: annotate-exo.md  exo-to-latex.md  remind.md
analyseD/: pca_temperature.R
analyseD/flashcards/: chap1.md
auto-anki/: CLAUDE.md  README.md  pyproject.toml
auto-anki/output/: flashcards.tsv
auto-anki/src/auto_anki/: cli.py  models.py  parser.py
auto-anki/tests/: test_models.py  test_tsv_generator.py
discreteProc/flashcards/: chap1.md
discreteProc/latex/consolidation/: main.tex
discreteProc/latex/td1/: exercises.tex  main.tex
discreteProc/latex/td1/answers/: exo1.tex  (+1 more)
discreteProc/latex/td2/: main.tex
discreteProc/latex/tutorials/: td1.tex  td2.tex
glm/: .lintr  Corr_Partiel_M1_24_25_Etudiants.Rmd  brouillon.R  solution2.R
glm/TP(Henri_PANJO)/TP1(Henri)/: solution1.R
glm/TP(Henri_PANJO)/TP2(Henri)/: helper_functions.R  solution2.R
glm/TP(Henri_PANJO)/TP3(Henri)/: helper_functions3.R  solution3.R
glm/TP(Henri_PANJO)/TP4(Henri)/: helper_functions4.R  solution4.R
glm/TP(Henri_PANJO)/TP5(Henri)/: helper_functions5.R  solution5.R
glm/latex/notes/: main.tex
glm/latex/td1/: main.tex
glm/latex/tutorials/: td1.tex
glm/readings/Chapter 1/: Chapter1Bis.html  Chapter1_suite_MLG.html  Code_Chapter1.Rmd  Code_Chapter1.html
glm/readings/Chapter 2/: Code_Chapter2_MLG.Rmd  ozone1.txt
glm/readings/Chapter 3/: Chapter3.1.html  Chapter3_2.html  Chapter3_3.html  Code_Chapter3.Rmd  Code_Chapter3.html
leetcode/: datamodel.py  shuffle_the_array.py
monte-carlo/: Gr04_PolinaPtukha_Xiaopeng.R  exo1-10(revisit).R  exo10.R  exo11.R  exo12.R  exo13.R  exo15.R  exo1and2.R  exo3and4.R  exo6.R  exo7.R  exo8.R  exo9.R  graded_lab1.R  graded_lab2.R  graded_lab2_DM.R  graded_lab3.R  helper_plot.R
monte-carlo/latex/: local-preamble.tex
monte-carlo/latex/graded_lab1/: main.tex
monte-carlo/latex/graded_lab2/: main.tex
monte-carlo/latex/graded_lab3/: main.tex  preamble.tex
optimization/latex/consolidation/: main.tex
optimization/latex/td1/: exercises.tex  main.tex  part1_exercises.tex
optimization/latex/td2/: main.tex
optimization/latex/tutorials/: td2.tex
portfolioOptim/: ex_mini_projet.ipynb  mini_projet.ipynb  resume.md
portfolioOptim/latex/td2/: main.tex
timeSeries/latex/notes/: main.tex
timeSeries/latex/td2/: reminders_td2.tex
timeSeries/latex/tutorials/: td2.tex
(+14 files in other folders)
